Add VP reference

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,19 +1,33 @@
 @article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
+  author     = {Knuth, Donald E.},
+  title      = {Literate Programming},
+  year       = {1984},
   issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+  publisher  = {Oxford University Press, Inc.},
+  address    = {USA},
+  volume     = {27},
+  number     = {2},
+  issn       = {0010-4620},
+  url        = {https://doi.org/10.1093/comjnl/27.2.97},
+  doi        = {10.1093/comjnl/27.2.97},
+  journal    = {Comput. J.},
+  month      = may,
+  pages      = {97–111},
+  numpages   = {15}
 }
 
 
+@article{Takatsuka1981SchwingerKohnRelationship,
+  title     = {Relationship between the Schwinger and Kohn-type variational principles in scattering theory},
+  author    = {Takatsuka, Kazuo and Lucchese, Robert R. and McKoy, Vincent},
+  journal   = {Phys. Rev. A},
+  volume    = {24},
+  issue     = {4},
+  pages     = {1812--1816},
+  numpages  = {0},
+  year      = {1981},
+  month     = {Oct},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevA.24.1812},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevA.24.1812}
+}
