--- a/docs/mymacros.tex
+++ b/docs/mymacros.tex
@@ -23,3 +23,7 @@
 \newcommand{\dU}{\Delta \widetilde U}
 \newcommand{\param}{\boldsymbol{\theta}}
 \newcommand{\umatrix}{\boldsymbol{u}}
+
+
+\newcommand{\transpose}[1]{{#1}^{\intercal}}
+\newcommand{\trans}{\intercal}
