Added anomalies ref

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -31,3 +31,17 @@
   doi       = {10.1103/PhysRevA.24.1812},
   url       = {https://link.aps.org/doi/10.1103/PhysRevA.24.1812}
 }
+
+@article{ADHIKARI1991435,
+  title    = {Anomalies of variational phase shifts},
+  journal  = {Chemical Physics Letters},
+  volume   = {181},
+  number   = {5},
+  pages    = {435-440},
+  year     = {1991},
+  issn     = {0009-2614},
+  doi      = {https://doi.org/10.1016/0009-2614(91)90376-K},
+  url      = {https://www.sciencedirect.com/science/article/pii/000926149190376K},
+  author   = {Sadhan K. Adhikari},
+  abstract = {It is demonstrated, contrary to various claims, that the phase shifts calculated via variational principles involving the Green function may exhibit anomalous behavior. These anomalies may appear in variational principles for the K matrix (Schwinger variational principle) of potential V, for (KV) (Kohn-type and Newton variational principles), and other variational principles of higher order (Takatsuka—McKoy variational principle).}
+}
